# venn-diagrams

./: Cargo.toml  README.md
snapshots/: normal__four.snap  render_optimize__six.snap
src/: diagram.rs  direction.rs  lib.rs  main.rs  matrix.rs  polyomino.rs  venn_diagram.rs
src/constants/: d2.rs  d3.rs  d4.rs  d5.rs  d6.rs  d7.rs  d8.rs  mod.rs  venn_diagram.rs
src/svg/: circles.rs  config.rs  corner.rs  layout.rs  mod.rs  offset.rs  path_layout.rs
src/svg/offset/: greedy.rs  mod.rs  optimizing.rs
src/venn/: d2.rs  d3.rs  d4.rs  d5.rs  d6.rs  d8.rs  mod.rs  venn_diagram.rs
tests/: examples.rs  integration_test.rs  normal.rs  optimizing.rs  render_optimize.rs
tests/common/: mod.rs
tests/common/snapshots/: render_optimize__common__eight.snap
tests/snapshots/: examples__eight.snap  integration_test__parliament_test.snap
