[package]
name = "venn-diagrams"
description = "Generate SVG venn diagrams"
authors = ["Pazzaz <pazzaz.sundqvist@gmail.com>"]
version = "0.2.0"
edition = "2024"
license = "MIT"
homepage = "https://github.com/Pazzaz/venn-diagrams"
repository = "https://github.com/Pazzaz/venn-diagrams"
keywords = ["plot", "visualization", "svg", "charts", "dataviz"]

[dependencies]
itertools = "0.14.0"
svg = "0.18.0"
z3 = {version = "0.19.2", features = ["gh-release"], optional = true}

[lints.clippy]
needless_range_loop = "allow"
use_self = "warn"

[dev-dependencies]
insta = "1.43.2"

[features]
optimize = ["z3"]
